# AlphaFix

./: .gitignore  CMakeLists.txt  README.md  buildwin.bat
AfterEffectsSDK/: .gitignore
Test Project/: Test Project.aep  Test Project.pkbo
Test Project/Adobe After Effects Auto-Save/: Test Project auto-save 1.aep
ffmpeg-shared/: .gitignore
src/: AlphaFix.cpp  AlphaFix.def  AlphaFix.h  AlphaFixDecoder.cpp  AlphaFixDecoder.h  AlphaFix_PiPL.r
